# Deep-Query-Optimization

./: CMakeLists.txt  LICENCE.txt  README.md
notebooks/: dynamic_programming.ipynb
src/: CMakeLists.txt  grouping.cpp
src/util/: distribution.hpp  fn.hpp
